table header alignment fix

--- a/css/table.css
+++ b/css/table.css
@@ -47,6 +47,7 @@
   .table100-head th {
     padding-top: 18px;
     padding-bottom: 18px;
+    padding-left: 20px;
   }
   
   .table100-body td {
